// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`access_hidden_namespace.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/access_hidden_namespace.w:7:5 | Unknown symbol \\"core\\""
`;

exports[`access_static_from_instance.w > stderr 1`] = `
"Compilation failed with 7 error(s)
Error at ../../../examples/tests/invalid/access_static_from_instance.w:4:3 | Static class fields not supported yet, see https://github.com/winglang/wing/issues/1668
Error at ../../../examples/tests/invalid/access_static_from_instance.w:7:5 | Unknown symbol \\"this\\"
Error at ../../../examples/tests/invalid/access_static_from_instance.w:7:5 | Variable this.instance_field is not reassignable 
Error at ../../../examples/tests/invalid/access_static_from_instance.w:8:5 | Unknown symbol \\"this\\"
Error at ../../../examples/tests/invalid/access_static_from_instance.w:8:5 | Variable this.f is not reassignable 
Error at ../../../examples/tests/invalid/access_static_from_instance.w:19:5 | Cannot access static property \\"f\\" from instance
Error at ../../../examples/tests/invalid/access_static_from_instance.w:20:5 | Cannot access static property \\"m\\" from instance"
`;

exports[`bring.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/bring.w:1:1 | Redundant bring of \\"std\\""
`;

exports[`bring_jsii.w > stderr 1`] = `
"Compilation failed with 2 error(s)
Error at ../../../examples/tests/invalid/bring_jsii.w:1:1 | bring \\"jsii-code-samples\\" must be assigned to an identifier (e.g. bring \\"foo\\" as foo)
Error at ../../../examples/tests/invalid/bring_jsii.w:4:1 | Cannot find module \\"foobar\\" in source directory"
`;

exports[`capture_mutables.w > stderr 1`] = `
"Compilation failed with 5 error(s)
Error at ../../../examples/tests/invalid/capture_mutables.w:8:10 | Cannot reference 'a' of type 'MutArray<str>' from an inflight context
Error at ../../../examples/tests/invalid/capture_mutables.w:10:10 | Cannot reference 's' of type 'MutSet<num>' from an inflight context
Error at ../../../examples/tests/invalid/capture_mutables.w:12:10 | Cannot reference 'm' of type 'MutMap<bool>' from an inflight context
Error at ../../../examples/tests/invalid/capture_mutables.w:14:10 | Cannot reference 'a_cloned' of type 'MutArray<str>' from an inflight context
Error at ../../../examples/tests/invalid/capture_mutables.w:14:19 | Unknown symbol \\"size\\""
`;

exports[`capture_reassignable.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/capture_reassignable.w:6:17 | Cannot capture a reassignable variable \\"x\\""
`;

exports[`cloud_function_expects_inflight.w > stderr 1`] = `
"Compilation failed with 2 error(s)
Error at ../../../examples/tests/invalid/cloud_function_expects_inflight.w:3:20 | Expected type to be \\"IFunctionHandler\\", but got \\"preflight (str): str\\" instead
Error at ../../../examples/tests/invalid/cloud_function_expects_inflight.w:9:14 | Expected type to be \\"IQueueOnMessageHandler\\", but got \\"inflight (num): void\\" instead"
`;

exports[`container_types.w > stderr 1`] = `
"Compilation failed with 17 error(s)
Error at ../../../examples/tests/invalid/container_types.w:2:28 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/container_types.w:3:12 | Expected \\"Set\\" type, found \\"Array<num>\\"
Error at ../../../examples/tests/invalid/container_types.w:5:24 | Expected type to be \\"Array<num>\\", but got \\"Array<str>\\" instead
Error at ../../../examples/tests/invalid/container_types.w:6:6 | Unknown symbol \\"some_random_method\\"
Error at ../../../examples/tests/invalid/container_types.w:9:32 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/container_types.w:10:20 | Expected type to be \\"Map<num>\\", but got \\"Array<str>\\" instead
Error at ../../../examples/tests/invalid/container_types.w:10:24 | Unknown parser error.
Error at ../../../examples/tests/invalid/container_types.w:10:28 | Unexpected 'string'.
Error at ../../../examples/tests/invalid/container_types.w:10:40 | Unknown parser error.
Error at ../../../examples/tests/invalid/container_types.w:12:20 | Expected type to be \\"Map<num>\\", but got \\"Map<str>\\" instead
Error at ../../../examples/tests/invalid/container_types.w:12:26 | Unknown symbol \\"some_random_method\\"
Error at ../../../examples/tests/invalid/container_types.w:15:24 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/container_types.w:16:10 | Expected \\"Array\\" type, found \\"Set<num>\\"
Error at ../../../examples/tests/invalid/container_types.w:17:20 | Expected type to be \\"Set<num>\\", but got \\"Array<num>\\" instead
Error at ../../../examples/tests/invalid/container_types.w:17:24 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/container_types.w:19:20 | Expected type to be \\"Set<str>\\", but got \\"Set<num>\\" instead
Error at ../../../examples/tests/invalid/container_types.w:20:4 | Unknown symbol \\"some_random_method\\""
`;

exports[`enums.w > stderr 1`] = `
"Compilation failed with 2 error(s)
Error at ../../../examples/tests/invalid/enums.w:5:21 | Enum \\"SomeEnum\\" does not contain value \\"FOUR\\"
Error at ../../../examples/tests/invalid/enums.w:8:11 | Expression must be a class or resource instance to access property \\"TWO\\", instead found type \\"SomeEnum\\""
`;

exports[`for_loop.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/for_loop.w:5:13 | Unable to iterate over \\"Bucket\\""
`;

exports[`immutable_container_types.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/immutable_container_types.w:3:4 | Unknown symbol \\"set\\""
`;

exports[`impl_interface.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/impl_interface.w:3:10 | Resource \\"A\\" does not implement method \\"handle\\" of interface \\"cloud.IQueueOnMessageHandler\\""
`;

exports[`inflight_in_class.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/inflight_in_class.w:3:3 | Class cannot have inflight fields"
`;

exports[`inflight_ref_invalid.w > stderr 1`] = `
"Compilation failed with 2 error(s)
Error at ../../../examples/tests/invalid/inflight_ref_invalid.w:12:19 | Unable to reference \\"this.reassignable\\" from inflight method \\"test\\" because it is reassignable (\\"var\\")
Error at ../../../examples/tests/invalid/inflight_ref_invalid.w:14:16 | Unable to reference \\"this.mut_array\\" from inflight method \\"test\\" because type MutArray<str> is not capturable"
`;

exports[`inflight_ref_resource_sub_field.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/inflight_ref_resource_sub_field.w:26:10 | Unable to reference \\"my_queue.push\\" from inflight method \\"test\\" because it is not an inflight method"
`;

exports[`json.w > stderr 1`] = `
"Compilation failed with 7 error(s)
Error at ../../../examples/tests/invalid/json.w:5:14 | Expected type to be \\"str\\", but got \\"Json\\" instead
Error at ../../../examples/tests/invalid/json.w:7:14 | Expected type to be \\"num\\", but got \\"Json\\" instead
Error at ../../../examples/tests/invalid/json.w:9:15 | Expected type to be \\"bool\\", but got \\"Json\\" instead
Error at ../../../examples/tests/invalid/json.w:11:19 | Expected type to be \\"Map<str>\\", but got \\"Json\\" instead
Error at ../../../examples/tests/invalid/json.w:13:20 | Expected type to be \\"Set<str>\\", but got \\"Json\\" instead
Error at ../../../examples/tests/invalid/json.w:15:21 | Expected type to be \\"Array<str>\\", but got \\"Json\\" instead
Error at ../../../examples/tests/invalid/json.w:20:14 | Unknown symbol \\"set\\""
`;

exports[`json_static.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/json_static.w:4:9 | Unknown symbol \\"set\\""
`;

exports[`missing_semicolon.w > stderr 1`] = `
"Compilation failed with 4 error(s)
Error at ../../../examples/tests/invalid/missing_semicolon.w:7:1 | Syntax error
Error at ../../../examples/tests/invalid/missing_semicolon.w:11:1 | Unexpected 'identifier'.
Error at ../../../examples/tests/invalid/missing_semicolon.w:16:24 | ';' expected.
Error at ../../../examples/tests/invalid/missing_semicolon.w:19:28 | '}' expected."
`;

exports[`mut_container_types.w > stderr 1`] = `
"Compilation failed with 14 error(s)
Error at ../../../examples/tests/invalid/mut_container_types.w:2:29 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/mut_container_types.w:3:12 | Expected \\"Set\\" type, found \\"MutArray<num>\\"
Error at ../../../examples/tests/invalid/mut_container_types.w:4:27 | Expected type to be \\"MutArray<num>\\", but got \\"Array<num>\\" instead
Error at ../../../examples/tests/invalid/mut_container_types.w:6:27 | Expected type to be \\"MutArray<num>\\", but got \\"MutArray<str>\\" instead
Error at ../../../examples/tests/invalid/mut_container_types.w:7:6 | Unknown symbol \\"some_method\\"
Error at ../../../examples/tests/invalid/mut_container_types.w:10:25 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/mut_container_types.w:11:10 | Expected \\"Array\\" type, found \\"MutSet<num>\\"
Error at ../../../examples/tests/invalid/mut_container_types.w:12:23 | Expected type to be \\"MutSet<num>\\", but got \\"Set<num>\\" instead
Error at ../../../examples/tests/invalid/mut_container_types.w:14:23 | Expected type to be \\"MutSet<num>\\", but got \\"MutSet<str>\\" instead
Error at ../../../examples/tests/invalid/mut_container_types.w:15:4 | Unknown symbol \\"some_method\\"
Error at ../../../examples/tests/invalid/mut_container_types.w:18:31 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/mut_container_types.w:20:10 | Expected \\"Array\\" type, found \\"MutMap<str>\\"
Error at ../../../examples/tests/invalid/mut_container_types.w:22:23 | Expected type to be \\"MutMap<num>\\", but got \\"Map<str>\\" instead
Error at ../../../examples/tests/invalid/mut_container_types.w:25:23 | Expected type to be \\"MutMap<str>\\", but got \\"MutMap<num>\\" instead"
`;

exports[`optionals.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/optionals.w:7:3 | Expected type to be \\"num\\", but got \\"num?\\" instead"
`;

exports[`primitives.w > stderr 1`] = `
"Compilation failed with 4 error(s)
Error at ../../../examples/tests/invalid/primitives.w:5:7 | Unexpected expression \\"structured_access_expression\\"
Error at ../../../examples/tests/invalid/primitives.w:9:16 | Unknown symbol \\"blabla\\"
Error at ../../../examples/tests/invalid/primitives.w:11:5 | Unknown symbol \\"push\\"
Error at ../../../examples/tests/invalid/primitives.w:13:14 | Expected type to be \\"str\\", but got \\"num\\" instead"
`;

exports[`reassign_to_nonreassignable.w > stderr 1`] = `
"Compilation failed with 4 error(s)
Error at ../../../examples/tests/invalid/reassign_to_nonreassignable.w:3:1 | Variable x is not reassignable 
Error at ../../../examples/tests/invalid/reassign_to_nonreassignable.w:13:5 | Variable this.f is not reassignable 
Error at ../../../examples/tests/invalid/reassign_to_nonreassignable.w:19:3 | Variable arg is not reassignable 
Error at ../../../examples/tests/invalid/reassign_to_nonreassignable.w:21:2 | ';' expected."
`;

exports[`resource_access_field_as_method.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/resource_access_field_as_method.w:8:1 | should be a function or method"
`;

exports[`resource_inflight.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error | Cannot create the resource \\"Bucket (at src/cloud/bucket.ts:27:1)\\" in inflight phase"
`;

exports[`sorted_errors_no_span.w > stderr 1`] = `
"Compilation failed with 6 error(s)
Error | Class c (at ../../../examples/tests/invalid/sorted_errors_no_span.w:3:7)'s parent \\"any\\" is not a class
Error | Class e (at ../../../examples/tests/invalid/sorted_errors_no_span.w:7:7)'s parent \\"any\\" is not a class
Error at ../../../examples/tests/invalid/sorted_errors_no_span.w:1:14 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/sorted_errors_no_span.w:3:17 | Expected b (at ../../../examples/tests/invalid/sorted_errors_no_span.w:3:17) to be a type but it's a variable
Error at ../../../examples/tests/invalid/sorted_errors_no_span.w:6:14 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/sorted_errors_no_span.w:7:17 | Expected b (at ../../../examples/tests/invalid/sorted_errors_no_span.w:7:17) to be a type but it's a variable"
`;

exports[`statement_invalid_scope.w > stderr 1`] = `
"Compilation failed with 4 error(s)
Error at ../../../examples/tests/invalid/statement_invalid_scope.w:3:5 | Expected break statement to be inside of a loop (while/for)
Error at ../../../examples/tests/invalid/statement_invalid_scope.w:7:5 | Expected break statement to be inside of a loop (while/for)
Error at ../../../examples/tests/invalid/statement_invalid_scope.w:11:5 | Expected continue statement to be inside of a loop (while/for)
Error at ../../../examples/tests/invalid/statement_invalid_scope.w:15:5 | Expected continue statement to be inside of a loop (while/for)"
`;

exports[`statements_if.w > stderr 1`] = `
"Compilation failed with 3 error(s)
Error at ../../../examples/tests/invalid/statements_if.w:2:1 | Unexpected unary operator \\"--\\"
Error at ../../../examples/tests/invalid/statements_if.w:5:5 | Expected type to be \\"bool\\", but got \\"num\\" instead
Error at ../../../examples/tests/invalid/statements_if.w:8:5 | Expected type to be \\"bool\\", but got \\"num\\" instead"
`;

exports[`std_containers.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/std_containers.w:3:18 | Expected type to be \\"Array<num>\\", but got \\"Array<str>\\" instead"
`;

exports[`struct_expansion.w > stderr 1`] = `
"Compilation failed with 5 error(s)
Error at ../../../examples/tests/invalid/struct_expansion.w:3:15 | \\"bublic\\" is not a field of \\"BucketProps\\"
Error at ../../../examples/tests/invalid/struct_expansion.w:7:15 | Expected between 0 and 1 arguments but got 2 when instantiating \\"Bucket\\"
Error at ../../../examples/tests/invalid/struct_expansion.w:7:32 | Expected type to be \\"BucketProps?\\", but got \\"num\\" instead
Error at ../../../examples/tests/invalid/struct_expansion.w:11:3 | Expected 2 arguments but got 1
Error at ../../../examples/tests/invalid/struct_expansion.w:11:15 | Unexpected 'keyword_argument'."
`;

exports[`try_no_catch_or_finally.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/try_no_catch_or_finally.w:1:1 | Missing \`catch\` or \`finally\` blocks for this try statement"
`;

exports[`types_strings_arithmetic.w > stderr 1`] = `
"Compilation failed with 5 error(s)
Error at ../../../examples/tests/invalid/types_strings_arithmetic.w:1:10 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/types_strings_arithmetic.w:1:16 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/types_strings_arithmetic.w:4:14 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/types_strings_arithmetic.w:7:10 | Expected type to be \\"num\\", but got \\"str\\" instead
Error at ../../../examples/tests/invalid/types_strings_arithmetic.w:13:10 | Expected type to be \\"num\\", but got \\"str\\" instead"
`;

exports[`unimplemented_grammar.w > stderr 1`] = `
"Compilation failed with 5 error(s)
Error at ../../../examples/tests/invalid/unimplemented_grammar.w:1:8 | builtin \\"void\\" is not supported yet see https://github.com/winglang/wing/issues/432
Error at ../../../examples/tests/invalid/unimplemented_grammar.w:2:8 | builtin \\"any\\" is not supported yet see https://github.com/winglang/wing/issues/434
Error at ../../../examples/tests/invalid/unimplemented_grammar.w:3:20 | builtin container type \\"Promise\\" is not supported yet see https://github.com/winglang/wing/issues/529
Error at ../../../examples/tests/invalid/unimplemented_grammar.w:4:9 | expression \\"defer_expression\\" is not supported yet see https://github.com/winglang/wing/issues/116
Error at ../../../examples/tests/invalid/unimplemented_grammar.w:5:9 | expression \\"await_expression\\" is not supported yet see https://github.com/winglang/wing/issues/116"
`;

exports[`unknown_symbol.w > stderr 1`] = `
"Compilation failed with 3 error(s)
Error at ../../../examples/tests/invalid/unknown_symbol.w:3:18 | Unknown symbol \\"clod\\"
Error at ../../../examples/tests/invalid/unknown_symbol.w:6:13 | Unknown symbol \\"y\\"
Error at ../../../examples/tests/invalid/unknown_symbol.w:17:25 | Unknown symbol \\"method_which_is_not_part_of_bucket_api\\""
`;

exports[`use_before_defined.w > stderr 1`] = `
"Compilation failed with 2 error(s)
Error at ../../../examples/tests/invalid/use_before_defined.w:1:10 | Unknown symbol \\"y\\"
Error at ../../../examples/tests/invalid/use_before_defined.w:5:12 | Symbol \\"x\\" used before being defined"
`;

exports[`variable_scoping.w > stderr 1`] = `
"Compilation failed with 1 error(s)
Error at ../../../examples/tests/invalid/variable_scoping.w:6:11 | Unknown symbol \\"x\\""
`;

exports[`void_in_expression_position.w > stderr 1`] = `
"Compilation failed with 3 error(s)
Error at ../../../examples/tests/invalid/void_in_expression_position.w:1:1 | Expression must be a class or resource instance to access property \\"get\\", instead found type \\"void\\"
Error at ../../../examples/tests/invalid/void_in_expression_position.w:7:13 | Expected type to be \\"num\\", but got \\"void\\" instead
Error at ../../../examples/tests/invalid/void_in_expression_position.w:11:5 | Cannot assign expression of type \\"void\\" to a variable"
`;
